@@ -1,3 +1,8 @@
+Thu Mar 17 09:35:07 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * tests/Policies/Manipulation.cpp:
+          Fixes due to ACE rand_r() changes.
+
 Thu Mar 17 09:32:45 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * tests/Nested_Upcall_Crash/Server_Peer.h:
